tests/repl/holes.vi
1 + _
_ ++ [1, 2, 3]
"abc" ++ _
(_, _) = (1, 2)
_[N32]
let x: &N32 = &_
/clear x
#[impl(Default, Show)] struct* Chain[T](T, Option[Chain[T]])
let x = _[Chain[()]]
let y: Chain[()] = _
/clear x y
#[impl(Default)] enum TrafficLight { Red(), Green(), Blue() } // error
(_[N32], _[N32]) = (1, 2) // error
"abc" ++ _[N32] // error
_ // error
